# base-hackathon

./: .env.example  .gitignore  COLOR_PALETTE.md  README.md  THEME_FIXES.md  foundry.toml  jest.config.js  jest.polyfills.js  jest.setup.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json
agent-alpha/: README.md  main.py  pyproject.toml  requirements.txt
agent-alpha/services/: binance.py  coingecko.py  indicators.py  signals.py
agent-alpha/tests/: test_indicators.py  test_property_backtest.py  test_property_indicators.py  test_property_signals.py  test_signals.py
contracts/: SentientTrader.sol
contracts/interfaces/: IERC20Extended.sol  IThetanutsRouter.sol
contracts/mocks/: MockThetanutsRouter.sol  MockTokens.sol
contracts/script/: Deploy.s.sol
contracts/test/: SentientTrader.t.sol
docs/: Agent.md  DEPLOYMENT.md  DEPLOY_TESTING_GUIDE.md  FINANCIAL_ADVISOR_FEATURE.md  GIT_WORKFLOW.md  NEYNAR.md  Overview.md  PRODUCTION_FIXES.md  REAL_TIME_FEATURES.md
scripts/: deploy-dev.sh  dev-fast.sh  generate-farcaster-key.ts  neynar-signer.ts  register-farcaster-key.ts  setup-vercel-env.sh  switch-user.sh
src/__tests__/: agent-beta.pbt.test.ts  agent-gamma.pbt.test.ts  trading-terminal.pbt.test.ts
src/agents/: agent-alpha.ts  agent-beta.ts  agent-gamma.ts
src/app/: globals.css  layout.tsx  page.tsx
src/config/: contracts.ts  wagmi.ts
src/hooks/: useAIAgent.ts  useAgentAlpha.ts  useAgentBeta.ts  useAgentGamma.ts  useFarcaster.ts  useGSAPAnimation.ts  useMultiAssetStream.ts  usePerformanceOptimization.ts  (+4 more)
(+111 files in other folders)
